# ai-clipper2026

./: .gitignore  README.md  _test_subs.py  pyproject.toml
clipper/: __init__.py  __main__.py  analyze.py  download.py  pipeline.py  reframe.py  render.py  server.py  transcribe.py  util.py
clipper/static/: index.html
