[project]
name = "ai-clipper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2026.6.9",
]
